-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.0 Beta2
-
None
-
-
c9ff62586 (dev), fee6283b8 (6.8), 828ef6b4c (6.7), 0bf48e28f (tqtc/lts-6.5), e4b298316 (6.8.0)
run the following code segment:
#include <QUrl> #include <QDebug> int main(int argc, char *argv[]) { QUrl url("/root/test/../foo/bar"); qDebug() << url.adjusted(QUrl::RemoveFilename | QUrl::NormalizePathSegments).toString(); }
observed result: "/root/test/../foo/"
expected output: "/root/foo/"
For Gerrit Dashboard: QTBUG-127711 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
581083,5 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | dev | qt/qtbase | Status: MERGED | +2 | 0 |
589942,2 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
589990,2 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
590854,2 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
590961,2 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | 6.8.0 | qt/qtbase | Status: MERGED | +2 | 0 |
590966,1 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |
670461,1 | QUrl::toString: fix using of NormalizePathSegments and RemoveFilename | tqtc/esm-5.15 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |